# py-exegia

./: .dockerignore  .env.development  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DOCUMENTATION_MAP.md  DOCUMENTATION_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART_CORPUS.md  README.md  biome.json  deno.json  docker-compose.yml  package.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.zed/: settings.json
_archives/old_routers/: sefaria.py
app/: database.py  main.py
app/corpus/: CLAUDE.md  EXAMPLES.md  manager.py
app/graphql/: CLAUDE.md  schema.py
app/graphql/resolvers/: corpus.py  corpus_query.py  users.py
app/graphql/types/: corpus.py  dataset.py
app/models/: CLAUDE.md  note.py  user.py
app/routers/: CLAUDE.md
app/storage/: datasets.py
app/utils/: convert_epub_to_xml.py  convert_html_to_tf.py
docs/: FRIENDLY_QUERIES.md  QUERY_FLOW.md
scripts/: clean.py  setup.py
src/: auth.py  config.py  database.py  main.py
src/alembic/: env.py
src/graphql/: schema.py
src/graphql/resolvers/: corpus.py  corpus_query.py  datasets.py  users.py
src/models/: CLAUDE.md  __init__.py  commentary.py  favorite.py  note.py  translation.py  user.py
src/schemas/: __init__.py  library.py
src/services/: epub.py  exg_converter.py  git_dataset.py
src/storage/: CLAUDE.md
src/supabase/: CLAUDE.md  __init__.py  config.toml
src/supabase/auth/: CLAUDE.md  __init__.py  __init__.pyi
src/utils/: epub_to_tf.py  ssl_cert.py  storage_client.py
supabase/: CLAUDE.md  config.toml
supabase/migrations/: 20260413000000_add_library_books.sql  20260413000001_extend_book_category.sql
supabase/seeds/: BibleInfo_rows.sql  BibleOrganization_rows.sql  CommentaryBook_rows.sql  Commentary_rows.sql  CrossReference_rows.sql  DatasetBook_rows.sql  Dataset_rows.sql  Translation_rows.sql
