[project]
name = "exegia-api"
version = "1.0.0"
description = "Exegia API — Bible study backend with Context-Fabric corpus support"
requires-python = ">=3.13"
dependencies = [
    # Workspace members
    "exegia-graphql",
    "exegia-corpus",
    "exegia-models",
    "exegia-routers",
    "exegia-schemas",
    "exegia-storage",
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # GraphQL
    "strawberry-graphql[fastapi]>=0.314.0",
    # Corpus
    "text-fabric>=13.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Supabase
    "supabase>=2.0.0",
    "storage3>=0.7.0",
    # HTTP client
    "httpx>=0.27.0",
    # Config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyOpenSSL>=23.0.0",
    # Utilities
    "python-multipart>=0.0.9",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "uv-mcp>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.uv.sources]
exegia-graphql = { workspace = true }
exegia-corpus  = { workspace = true }
exegia-models  = { workspace = true }
exegia-routers = { workspace = true }
exegia-schemas = { workspace = true }
exegia-storage = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/seeds"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "src"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
